--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ addons:
   chrome: stable
 
 install:
-  - travis_retry composer install --no-interaction --prefer-dist --no-suggest --no-dev
+  - travis_retry composer install --no-interaction --prefer-dist --no-suggest 
   - php artisan key:generate
 
 before_script:
