--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: php
-dist: trusty
 
 php:
   - 7.3
@@ -13,8 +12,9 @@ install:
   - php artisan key:generate
 
 before_script:
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+ # - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+  - phantomjs --webdriver=127.0.0.1:9515
   - php artisan serve &
-
+  - sleep 5
 script:
   - php artisan dusk
