--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ language: php
 php:
   - 7.3
 
-addons:
-  chrome: stable
+#addons:
+  #chrome: stable
 
 install:
   - cp .env.testing .env
@@ -12,6 +12,12 @@ install:
   - php artisan key:generate
 
 before_script:
+  - sudo apt-get update -y
+  - sudo apt-get install unzip xvfb libxi6 libgconf-2-4 libnss3 wget -yqq
+  - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+  - sudo sh -c 'echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
+  - sudo apt-get update -yqq
+  - sudo apt-get install -y google-chrome-stable
  # - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
   - php artisan serve &
   - ./vendor/laravel/dusk/bin/chromedriver-linux --port=9515 &
