--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,9 @@ before_script:
   #- sudo sh -c 'echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
   #- sudo apt-get update -yqq
   #- sudo apt-get install -y google-chrome-stable
- # - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
   - php artisan serve &
-  - ./vendor/laravel/dusk/bin/chromedriver-linux --port=9515 &
+  #- ./vendor/laravel/dusk/bin/chromedriver-linux --port=9515 &
   - sleep 5
 script:
   - php artisan dusk
