--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ language: php
 php:
   - 7.3
 
-addons:
-  chrome: stable
+#addons:
+  #chrome: stable
 
 install:
   - cp .env.testing .env
@@ -18,7 +18,11 @@ before_script:
   #- sudo sh -c 'echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
   #- sudo apt-get update -yqq
   #- sudo apt-get install -y google-chrome-stable
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+  #- google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+  - cd vendor/laravel/dusk/bin
+  - wget  https://chromedriver.storage.googleapis.com/2.46/chromedriver_linux64.zip
+  - unzip chromedriver_linux64.zip
+  - ./vendor/laravel/dusk/bin/chromedriver --port=9515 &
   - php artisan serve &
   #- ./vendor/laravel/dusk/bin/chromedriver-linux --port=9515 &
   - sleep 5
