--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ dist: trusty
 
 php:
   - 7.1
-
+addons:
+  chrome: stable
+  
 install:
   - cp .env.testing .env
   - travis_retry composer install --no-interaction
