--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,19 @@ language: php
 dist: trusty
 
 php:
-  - 7.1
+   - 7.2
+
 addons:
-  chrome: stable
-  
+   chrome: stable
+
 install:
-  - cp .env.testing .env
-  - travis_retry composer install --no-interaction
+   - travis_retry composer install --no-interaction --prefer-dist --no-suggest
+   - travis_retry npm install
+   - npm run prod
 
 before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-  - ./vendor/laravel/dusk/bin/chromedriver-linux &
-  - php artisan serve &
+   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+   - php artisan serve &
 
 script:
-  - php artisan dusk
+   - php artisan dusk
