--- a/.env.testing
+++ b/.env.testing
@@ -7,7 +7,7 @@ APP_URL=http://127.0.0.1:8000
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=127.0.0.1d
 DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
