--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,27 @@
 sudo: required
-language: php
+
 dist: trusty
 
+language: php
+
 php:
-   - 7.2
+  - '7.2'
 
 addons:
    chrome: stable
 
 install:
+   - cp .env.testing .env
+   - composer self-update
    - travis_retry composer install --no-interaction --prefer-dist --no-suggest
-   - travis_retry npm install
-   - npm run prod
 
 before_script:
-   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9515 http://localhost &
+   - mysql -e 'create database pingtocoffee_test;'
+   - php artisan key:generate
+   - php artisan migrate --force
+   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
    - php artisan serve &
 
 script:
+   - phpunit
    - php artisan dusk
