--- a/.env.testing
+++ b/.env.testing
@@ -1,40 +1,60 @@
-APP_NAME=Laravel
-APP_ENV=testing
-APP_KEY=
-APP_DEBUG=true
+# App name
+APP_NAME="Ping to coffee"
+
+# App environment. Have 3 values: local|testing|production
+APP_ENV=local
+
+# App secret key. Run `php artisan key:generate` to generate.
+APP_KEY=ApplicationKey
+
+# App debug, set true to turn on.
+APP_DEBUG=false
+
+# App URL
 APP_URL=http://127.0.0.1:8000
+
+# App default timezone, set default (UTC + 00:00)
+APP_DEFAULT_TIMEZONE=UTC
+
+# Disable sign up option, set true to turn off sign up.
+APP_DISABLE_SIGNUP=false
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1d
+# Database connection information
+DB_CONNECTION=testing
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=DatabaseName
+DB_USERNAME=DatabaseUsername
+DB_PASSWORD=DatabasePassword
+DB_TEST_DATABASE=pingtocoffee_test
+DB_TEST_USERNAME=root
+DB_TEST_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+
+# Queue driver: sync|database|beanstalkd|sqs|redis
+QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+# Mail configuration information
+MAIL_DRIVER=MailProtocol
+MAIL_HOST=MailHost
+MAIL_PORT=MailPort
+MAIL_USERNAME=MailUsername
+MAIL_PASSWORD=MailPassword
+MAIL_ENCRYPTION=MailEncryption
+MAIL_FROM_ADDRESS=MailFromAddress
+MAIL_FROM_NAME=MailFromName
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-
+# Pusher configuration information
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
@@ -42,3 +62,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# File system driver, config in config/filesystems.php.
+# Ex: local|public|s3|...
+FILESYSTEM_DRIVER=public
+
+# Sentry DNS
+SENTRY_LARAVEL_DSN=
