--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,17 @@
-sudo: required
-
-dist: trusty
 
 language: php
 
 php:
-  - '7.2'
-
-addons:
-   chrome: stable
+  - 7.0
 
 install:
-   - cp .env.testing .env
-   - composer self-update
-   - travis_retry composer install --no-interaction --prefer-dist --no-suggest
+  - travis_retry composer install --no-interaction --prefer-dist --no-suggest
+  - cp .env.example .env          # Create a new .env file
+  - php artisan key:generate      # Generate application key
 
 before_script:
-   - mysql -e 'create database pingtocoffee_test;'
-   - php artisan key:generate
-   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-   - php artisan serve &
+  - phantomjs --webdriver=127.0.0.1:9515 &  # Start PhantomJS driver
+  - php artisan serve &                     # Start server
+  - sleep 5                                 # Give PhantomJS and Artisan time to start
 
-script:
-   - phpunit
-   - php artisan dusk
+script: php artisan dusk
