--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ php:
   - 7.0
 
 install:
+    - cp .env.testing .env          # Create a new .env file
   - travis_retry composer install --no-interaction --prefer-dist --no-suggest
-  - cp .env.example .env          # Create a new .env file
   - php artisan key:generate      # Generate application key
 
 before_script:
