--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,19 @@
-
 language: php
 
 php:
-  - 7.2
+  - 7.3
+
+addons:
+  chrome: stable
 
 install:
-  - cp .env.testing .env          # Create a new .env file
-  - travis_retry composer self-update
+  - cp .env.testing .env
   - travis_retry composer install --no-interaction --prefer-dist --no-suggest
-  - php artisan key:generate      # Generate application key
+  - php artisan key:generate
 
 before_script:
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-  - php artisan serve &                     # Start server
-  - sleep 5                                 # Give PhantomJS and Artisan time to start
+  - php artisan serve &
 
-script: php artisan dusk
+script:
+  - php artisan dusk
