--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ install:
   - php artisan key:generate
 
 before_script:
+  - google-chrome-stable --version
+  - php artisan dusk:update
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
   - php artisan serve &
 
