--- a/.env.testing
+++ b/.env.testing
@@ -37,7 +37,7 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-# Queue driver: sync|database|beanstalkd|sqs|redis
+# Queue driver: sync|database|beanstalkd|sqs|redish
 QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
