--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
 
 before_script:
   - google-chrome-stable --version
-  - php artisan dusk:update
+  - php artisan dusk:update 74
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
   - php artisan serve &
 
